[tool.poetry]
name = "unzuckify"
version = "0.1.0"
description = "Helps remove Daddy Zuck from my life"
authors = ["Radon Rosborough <radon.neon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
xdg = "^5.1.1"
requests = "^2.26.0"
esprima = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
